--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.1"
+    "react-scripts": "^4.0.1",
+    "@material-ui/core": "4.12.3",
+    "moment": "2.29.1",
+    "react-bootstrap-icons": "1.5.0"
   },
   "scripts": {
     "start": "react-scripts start"
