--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.1",
     "@material-ui/core": "4.12.3",
+    "lodash": "4.17.21",
     "moment": "2.29.1",
     "react-bootstrap-icons": "1.5.0"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "author": "Manoj S",
   "license": "ISC",
